--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,93 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Covid 19"
+        android:text="Covid 19 - Mexico"
         android:layout_centerInParent="true"
         android:gravity="center"
-        android:textSize="18sp"
+        android:textSize="20sp"
         android:textStyle="bold"
+        android:layout_weight="0.1"
+        />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/introAnos"
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:textSize="14sp"
+        android:layout_weight="0.1"
+        android:layout_marginVertical="4dp"
+        />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_weight="0.1"
+        android:layout_centerInParent="true"
+        android:gravity="center">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="..."
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:id="@+id/ano1"
+                android:layout_marginVertical="2dp"
+                />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="..."
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:id="@+id/ano2"
+                android:layout_marginVertical="2dp"
+                />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="..."
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:id="@+id/ano3"
+                android:layout_marginVertical="2dp"
+                />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="..."
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:id="@+id/ano4"
+                android:layout_marginVertical="2dp"
+                />
+
+    </LinearLayout>
+
+
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/introHistorial"
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:textSize="14sp"
+        android:layout_weight="0.1"
+        android:layout_marginVertical="4dp"
         />
 
     <androidx.recyclerview.widget.RecyclerView
