--- a/app/src/main/res/layout/item_main.xml
+++ b/app/src/main/res/layout/item_main.xml
@@ -14,31 +14,30 @@
         android:layout_height="wrap_content"
         app:cardCornerRadius="20dp"
         >
-        <RelativeLayout
+        <LinearLayout
             android:id="@+id/relaoutint"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#EFEFEF"
             android:paddingHorizontal="4dp"
+            android:paddingVertical="8dp"
+            android:orientation="vertical"
+            android:layout_gravity="center"
+            android:gravity="center"
             >
 
             <TextView
                 android:id="@+id/TVdate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="2dp"
-                android:layout_marginBottom="50dp"
                 android:text="Fecha: "
                 android:textColor="@color/black"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:layout_marginBottom="4dp"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_marginTop="40dp"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -61,10 +60,6 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="40dp"
-                android:layout_marginEnd="30dp"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -85,7 +80,7 @@
             </LinearLayout>
 
 
-        </RelativeLayout>
+        </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 
